--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ h3 {
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 /* Navigation Bar */
@@ -63,6 +63,7 @@ h3 {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+  position: absolute;
 }
 
 .fa-check-circle,
@@ -89,6 +90,8 @@ p {
 
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
 
 /* Testimonials */
@@ -119,4 +122,59 @@ p {
 .press-logo {
   width: 15%;
   margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+
+#pricing {
+  text-align: center;
+  padding: 7% 15%;
+}
+
+.pricing-column {
+  padding: 3% 2%;
+}
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
+}
+
+/* Call to action section */
+
+#cta {
+  background-color: #ff4c68;
+  text-align: center;
+  padding: 7% 15%;
+}
+
+#cta > h3 {
+  font-family: "Montserrat";
+  font-size: 3.5rem;
+  line-height: 1.5;
+  color: #fff;
+  width: 70%;
+  text-align: center;
+  margin: 1% 15% 3%;
+}
+
+/* Footer */
+footer {
+  background-color: #fff;
+  text-align: center;
+  font-size: 2rem;
+  padding: 2%;
+}
+
+footer > fab {
+  padding: 4%;
+}
+
+footer > p {
+  font-size: 0.75rem;
 }
